<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/fragment_character_overall_top_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/rank"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_rank_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_character_overall_mid_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_top_text_layout"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/clan"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_clan_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/xp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_xp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_character_overall_low_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_mid_text_layout"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/school"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_school_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/insight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_insight_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_character_overall_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fragment_character_overall_low_text_layout"
        android:layout_marginTop="8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/fragment_character_overall_earth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_separator"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:text="@string/earth"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_character_overall_earth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_overall_earth_label"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_overall_earth_label"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/fragment_character_overall_earth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_earth_label"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/stamina"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_stamina_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/willpower"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_willpower_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_character_overall_water_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_earth_layout"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:text="@string/water"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_character_overall_water_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_overall_water_label"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_overall_water_label"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/fragment_character_overall_water_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_water_label"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/strenght"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_strenght_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/perception"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_perception_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_character_overall_air_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_water_layout"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:text="@string/air"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_character_overall_air_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_overall_air_label"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_overall_air_label"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/fragment_character_overall_air_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_air_label"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/reflexes"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_reflexes_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/awareness"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_awareness_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_character_overall_fire_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_air_layout"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:text="@string/fire"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_character_overall_fire_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_overall_fire_label"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_overall_fire_label"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/fragment_character_overall_fire_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_fire_label"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/agility"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_agility_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:text="@string/intelligence"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_character_overall_intelligence_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/fragment_character_overall_void_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_character_overall_fire_layout"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:text="@string/_void"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fragment_character_overall_void_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_overall_void_label"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_overall_void_label"
        android:textSize="16sp" />

</RelativeLayout>