<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/dialog_create_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dialog_create_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/dialog_create_name_text"
        android:layout_below="@id/dialog_create_name_text"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/dialog_create_buttons_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_create_name_edit"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_create_ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_create_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>