<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_character_creation_name_text"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/fragment_character_creation_clan_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical" >
        </ListView>

        <ListView
            android:id="@+id/fragment_character_creation_family_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical" >
        </ListView>

        <ListView
            android:id="@+id/fragment_character_creation_school_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_character_creation_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_character_creation_randomize_button"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/fragment_character_creation_lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_creation_name_text"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_creation_name_text"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/fragment_character_creation_firstname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/fragment_character_creation_name_text"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_creation_lastname_text"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/fragment_character_creation_gender_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fragment_character_creation_male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/fragment_character_creation_female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/fragment_character_creation_randomize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/fragment_character_creation_gender_buttons"
        android:gravity="center"
        android:text="@string/randomize"
        android:textSize="14sp" />

</RelativeLayout>